# Pendubot

bldc_stand_simulation/bldc_stand_sim/: CMakeLists.txt  package.xml
imu_sensor/: CMakeLists.txt  package.xml
imu_sensor/msg/: ImuData.msg
imu_sensor/src/: ConsoleTerminal.h  IMURead.cpp  ImuModule.hpp  UDPServer.hpp
pendubot/bldc_stand/: README.md
pendubot/pndbt_bringup/: CMakeLists.txt  package.xml
pendubot/pndbt_driver/: CMakeLists.txt  package.xml
pendubot_matlab/: K_mtrx.mat  K_mtrx2.mat  design_controller_PoC.m  generate_AB_mtrcs.m  generate_Intg_table.m  generate_Intg_table.m~  nominal_trajectory.m  nominal_trajectory.m~  ode_pendubot.m  pendubot_visualize.m  pndbt_dnmcs.m  pndbt_dnmcs.m~  pndbt_region_attraction.m  pndbt_trj.m  q_str.mat  q_str1.mat  tests_PoC.m  tests_PoC.m~
pendubot_matlab/PRDE/: K_mtrx2.mat  benchmark_system.m  diary  matrixBezierPolynomial.m  matrixTrigPolynomial.m  solvePRDE.m  testPRDE.m
pendubot_matlab/autogen/: A_mtrx.m  A_mtrx_fcn.m  A_mtrx_pndlm.m  B_mtrx.m  B_vctr_fcn.m  B_vctr_pndlm.m  C_mtrx_fcn.m  Jacob_fcn.m  M_mtrx_fcn.m  M_mtrx_fcn_pndlm.m  N_fcn.m  Phi_fcn.m  Phi_prm_fcn.m  U_ff.m  U_full.m  alpha_fcn.m  beta_fcn.m  (+6 more)
pndbt/: CMakeLists.txt  package.xml
pndbt_control/: package.xml
pndbt_description/: CMakeLists.txt  package.xml
pndbt_hw/maccepa_msgs/: CMakeLists.txt  package.xml
pndbt_hw/maccepa_msgs/msg/: EncRawData.msg  EncRawData2.msg  GoalState.msg  MotorsPose.msg  MotorsVel.msg
pndbt_hw_encoders/: CMakeLists.txt  package.xml
pndbt_integral/: CMakeLists.txt  package.xml
pndbt_sim/: README.md
(+151 files in other folders)
